2013-01-07  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlparse.c: (gst_ttmlparse_sax_element_start),
	(gst_ttmlparse_sax_characters):
	* src/gstttmlutils.c: (gst_ttml_utils_node_type_name):
	* src/gstttmlutils.h:
	  - Better debug messages involving node type names.

2013-01-07  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlspan.c: (gst_ttml_span_new):
	  - Proper removal of CR characters (instead of replacing by SPACE)

2012-12-28  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlstyle.c:
	  - Fix linux build by removing unused function.

2012-12-28  Xavi Artigas  <xartigas@fluendo.com>

	* src/gstttmlattribute.c: (gst_ttml_attribute_parse),
	(gst_ttml_attribute_free), (gst_ttml_attribute_copy),
	(gst_ttml_attribute_type_name):
	* src/gstttmlattribute.h:
	* src/gstttmlenums.h:
	* src/gstttmlparse.c: (gst_ttmlparse_sax_element_start),
	(gst_ttmlparse_sax_element_end),
	(gst_ttmlparse_sax_document_start), (gst_ttmlparse_reset),
	(gst_ttmlparse_chain), (gst_ttmlparse_cleanup),
	(gst_ttmlparse_init):
	* src/gstttmlparse.h:
	* src/gstttmlstate.c: (gst_ttml_state_free_content),
	(gst_ttml_state_free), (gst_ttml_state_free_attr_stack),
	(gst_ttml_state_reset), (gst_ttml_state_set_attribute),
	(gst_ttml_state_get_attribute), (gst_ttml_state_push_attribute),
	(gst_ttml_state_pop_attribute), (gst_ttml_state_save_attr_stack),
	(gst_ttml_state_restore_attr_stack):
	* src/gstttmlstate.h:
	* src/gstttmlstyle.c: (gst_ttml_style_free_content),
	(gst_ttml_style_free), (gst_ttml_style_reset),
	(gst_ttml_style_gen_pango):
	* src/gstttmlstyle.h:
	* src/gstttmlutils.c: (gst_ttml_utils_node_type_parse):
	  - Support for referential styling (where the style is defined in a
	    <styling> node and later referred to by id)
	  - Enhanced rebustness against malformed XMLs (where proper closing
	    of the document might not happen)
	  - Added some more comments, hide unnecessary public methods, rename
	    variables, added some consts
